--- a/front-end/src/places/components/PlaceItem.css
+++ b/front-end/src/places/components/PlaceItem.css
@@ -6,6 +6,11 @@
   padding: 0;
 }
 
+.map-container {
+  height: 20rem;
+  width: 100%;
+}
+
 .place-item__info {
   padding: 1rem;
   text-align: center;
@@ -51,5 +56,5 @@
 @media (min-width: 768px) {
   .place-item__image {
     height: 20rem;
-  } 
+  }
 }
